<resources>
    <string name="app_name">Food App</string>
    <string name="text_name">Gigih Dwi Cahyo</string>
    <string name="text_hello">Hai Gigih !</string>
    <string name="text_greeting">Mau makan apa hari ini ?</string>
    <string name="discount_description">Pesan makanan lewat aplikasi dan dapatkan diskonmu</string>
    <string name="diskon_tittle">Diskon 30%</string>
    <string name="tittle_rice">Nasi</string>
    <string name="tittle_mie">Mie</string>
    <string name="tittle_snack">Snack</string>
    <string name="tittle_drink">Minuman</string>
    <string name="tittle_ice_cream">Es Krim</string>
    <string name="list_menu">List Menu Makanan</string>
    <string name="category_tittle">Category</string>
    <string name="tittle_location">Lokasi</string>
    <string name="resto_address">Jl. BSD Green Office Park Jl. BSD Grand Boulevard, Sampora, BSD, Kabupaten Tangerang, Banten 15345</string>
    <string name="menu_home">Home</string>
    <string name="menu_keranjang">Keranjang</string>
    <string name="menu_riwayat">Riwayat</string>
    <string name="menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="count_number">1</string>
    <string name="text_insert_to_cart">Masukkan ke Keranjang</string>
    <string name="text_habis">~ Habis ~</string>
    <string name="tittle_profile">My Profile</string>
    <string name="text_hint_username">Username</string>
    <string name="text_hint_email">Email</string>
    <string name="text_email">g.....@gmail.com</string>
    <string name="text_hint_phone">Telepon</string>
    <string name="text_phone">0821....</string>
    <string name="text_edit">Edit</string>
    <string name="text_hint_notes">Notes</string>
    <string name="text_title_your_cart">Keranjangmu</string>
    <string name="text_cart_is_empty">Keranjang Kosong</string>
    <string name="total_quantity">x%s</string>
    <string name="text_add_to_cart_success">Berhasil menambahkan ke Keranjang</string>
    <string name="add_to_cart_failed">Gagal memasukkan ke Keranjang</string>
    <string name="loading">Loading</string>
    <string name="text_resto_name">The Breeze BSD City</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_total_price">Total Harga</string>
    <string name="text_title_order_confirmation">Order Confirmation</string>
    <string name="text_delivery_method">Metode Pengiriman</string>
    <string name="text_pick_up">Ambil Sendiri</string>
    <string name="text_delivery">Pengiriman</string>
    <string name="text_payment_method">Metode Pembayaran</string>
    <string name="text_cash">Tunai</string>
    <string name="text_e_wallet">E-Wallet</string>
    <string name="shopping_summary">Ringkasan Belanjaan</string>
    <string name="text_order_successful">Pesanan Berhasil</string>
    <string name="text_thank_you">Terima Kasih telah Berbelanja!</string>
    <string name="text_back_to_home">Kembali ke Home</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_log_in">Login</string>
    <string name="text_not_registered">Belum Terdaftar?</string>
    <string name="text_register_here">Daftar Disini</string>
    <string name="text_error_email_empty">Email tidak boleh kosong !</string>
    <string name="text_error_email_invalid">Masukkan format email yang benar !</string>
    <string name="text_error_password_empty">Password tidak boleh kosong !</string>
    <string name="text_error_password_less_than_8_char">Password kurang dari 8 karakter</string>
    <string name="text_login_failed">Email atau Password Salah !!\nSilahkan Coba Lagi !!</string>
    <string name="text_login_success">Anda Berhasil Login</string>
    <string name="text_welcome">Selamat Datang</string>
    <string name="text_reminder_to_login">Silahkan Login Terlebih Dahulu</string>
    <string name="text_reminder_to_register">Silahkan Lakukan Pendaftaran</string>
    <string name="text_register">Register</string>
    <string name="text_already_registered">Sudah Punya Akun?</string>
    <string name="text_login_here">Login Disini</string>
    <string name="text_error_name_cannot_empty">Nama tidak boleh kosong !</string>
    <string name="text_password_does_not_match">Password tidak sama</string>
    <string name="text_register_success">Anda Telah Terdaftar\nSilahkan Login</string>
    <string name="text_register_failed">Pendaftaran Gagal</string>
    <string name="text_logout">Logout</string>
    <string name="text_error_checkout">Checkout Error</string>
    <string name="text_want_logout">Apakah kamu ingin logout ?</string>
    <string name="text_alert">Peringatan</string>
    <string name="text_yes">Ya</string>
    <string name="text_no">Tidak</string>
    <string name="text_please_login">Harap login terlebih dahulu untuk melanjutkan.</string>
    <string name="text_hint_nama_lengkap">Nama Lengkap</string>
    <string name="text_hint_password">Password</string>
    <string name="text_request_change_password">Request Ganti Password</string>
    <string name="text_okay">Okay</string>
    <string name="text_request_success">Permintaan ganti password terkirim ke emailmu : %1$s tolong cek email dan spam</string>
    <string name="text_change_photo_profile_success">Change Photo Profile Success !</string>
    <string name="text_change_photo_profile_failed">Change Photo Profile Failed !</string>
    <string name="change_profile_data_success">Change Profile data Success !</string>
    <string name="text_change_profile_data_failed">Change Profile data Failed !</string>
</resources>