<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/iv_decoration"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="-16dp"
        android:background="@drawable/bg_profile"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tittle_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/exo2_bold"
        android:text="@string/tittle_profile"
        android:textColor="?attr/colorSurface"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_icon_profile"
        android:backgroundTint="?attr/colorSurface"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tittle_profile"
        app:tint="?attr/colorOnSurface" />

    <ImageView
        android:id="@+id/iv_edit_photo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile_photo"
        app:layout_constraintEnd_toEndOf="@id/iv_profile_photo"
        app:tint="?attr/colorPrimary" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/layout_form"
        layout="@layout/layout_user_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_decoration"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginVertical="32dp"
        android:drawableLeft="@drawable/ic_edit"
        android:drawableTint="?attr/colorSurface"
        android:text="@string/text_edit"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_form" />

    <Button
        android:id="@+id/btn_request_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/text_request_change_password"
        android:backgroundTint="@color/grey_border"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/text_logout"
        android:backgroundTint="?attr/colorError"
        app:layout_constraintTop_toBottomOf="@+id/btn_request_change_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>